<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MarkerBasedAR</string>
    <string name="calibrate">Calibrate</string>
    <string name="doAR">Do Augmented Reality</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="calibration">Calibration</string>
    <string name="undistortion">Undistortion</string>
    <string name="comparison">Comparison</string>
    <string name="preview_mode">Preview Mode</string>
    <string name="more_samples">More Samples</string>
    <string name="calibrating">Calibrating</string>
    <string name="please_wait">Please wait</string>
    <string name="original">Originale</string>
    <string name="undistorted">undistorted</string>
    <string name="calibration_successful">Calibrationsuccessful</string>
    <string name="calibration_unsuccessful">Calibration unsuccessful</string>
</resources>
